--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-us">
+    <!--
+	Name: Rodwan
+	File: filename.html
+	Date: 22 Nov 2023
+	Making a silly story generator
+	-->
+
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
